--- a/foo.html
+++ b/foo.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        연세대가 짱이야 생각해보니 고대가 짱인 것 같아
-        그래 둘 다 짱이야
+        연세대가 짱이야 생각해보니 고대가 짱인 것 같아 그래 둘 다 짱이야 아니야
+        역시 고대가 그래도 낫지
     </body>
 </html>
